reset security to the project